PHP Charset Detect Extension Changelog

$Id: Changelog,v 1.8 2009-10-05 10:07:07 oops Exp $

* 0.0.2
--------------------------------------------------------------------------------

Mon Oct  5 2009
by JoungKyun Kim <http://oops.org>
	- fixed config.m4 shell test syntax

Thu Feb 23 2009
by JoungKyun Kim <http://oops.org>
	- changed moz to py
	- add mozilla universal charset detect mode with c library

* 0.0.1
--------------------------------------------------------------------------------

Thu Feb 20 2009
by JoungKyun Kim <http://oops.org>
	- changed Py_Initialize to Py_InitializeEx
	- fix problem that confidencial set 0 if confidencial is int, on moz_chardet
	- changed efree to SAFE_EFREE macro
	- support Mozilla Univercial Chardet
	- replace python conflict charactor

Wed Feb 19 2009
by JoungKyun Kim <http://oops.org>
	- first build
